force-app/main/default/objects/LiveAgentSession/fields/Agent_Country__c.field-meta.xml
<CustomField>
    <fullName>Agent_Country__c</fullName>
    <formula>TEXT (Owner:User.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Country</label>
    <type>Text</type>
</CustomField>