force-app/main/default/objects/LiveAgentSession/fields/Agent_Queue__c.field-meta.xml
<CustomField>
    <fullName>Agent_Queue__c</fullName>
    <formula>Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Queue</label>
    <type>Text</type>
</CustomField>