force-app/main/default/objects/LiveAgentSession/fields/Hours_Spen__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spen__c</fullName>
    <description>Time spent in chats in hours</description>
    <formula>TimeInChats / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours spent in Chats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>