force-app/main/default/objects/LiveAgentSession/fields/Hours_spent_Online__c.field-meta.xml
<CustomField>
    <fullName>Hours_spent_Online__c</fullName>
    <description>Time spent online</description>
    <formula>TimeInOnlineStatus / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours spent Online</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>